--- a/AnotherGSexercisewebpages.html
+++ b/AnotherGSexercisewebpages.html
@@ -9,7 +9,7 @@
 <table width="70%" align="center" style="background: whitesmoke;">
 <tr>
 	<td>
-		<p style="text-align: center;"><img src="C:\Users\Lenovo\Downloads\MicrosoftTeams-image (19).png" width="220"></p>
+		<p style="text-align: center;"><img src="MicrosoftTeams-image (19).png" width="220"></p>
 	</td>
 	<th>
 		<p style="color: darkgreen; font-size: 450%;"><b>Gardening School</b></p>
@@ -25,12 +25,12 @@
 		<p style="text-align: justify; text-indent: 50px; color: forestgreen;">Learning gardens have proven to be popular among students. Xiao Zhen, from Concord Primary enjoys her gardening sessions. “I love to do gardening in school. I love plants and I like to see plants growing higher and higher, from a seed to a tall, tall tree! When I do gardening, I feel special, as I enjoy taking care of the plants, and helping in watering and pulling out weeds.”</p>
 	</td>
 	<td style="border: 1px solid;">
-	<a href="C:\Users\Lenovo\Desktop\AGSEWP 3.html" target="blank"><img src="C:\Users\Lenovo\Downloads\MicrosoftTeams-image (18).png" width="210"></a>
+	<a href="AGSEWP 3.html" target="blank"><img src="MicrosoftTeams-image (18).png" width="210"></a>
 	</td>
 </tr>
 <tr>
 	<td style="border: 1px solid;">
-		<a href="C:\Users\Lenovo\Desktop\AGSEWP 2.html" target="blank"><img src="C:\Users\Lenovo\Downloads\MicrosoftTeams-image (17).png" width="210"></a>
+		<a href="AGSEWP 2.html" target="blank"><img src="MicrosoftTeams-image (17).png" width="210"></a>
 	</td>
 </tr>
 </table>
@@ -75,7 +75,7 @@
     </td>
 <td>
 	<video width="500" height="300" controls>
-		<source src="C:\Users\Lenovo\Downloads\gs.mp4" type="video/mp4">
+		<source src="gs.mp4" type="video/mp4">
 	</video>
 </td>
 </tr>
